# Game

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Game.cpp  GameLogic.cpp  GameLogic.h  Makefile  ModelLoader.cpp  ModelLoader.h  README.md  Renderer.cpp  Renderer.h  Utils.hpp  build.sh  cmake_install.cmake  main.cpp
Models/: Aircraft_Carrier(low_poly).blend  Aircraft_Carrier(low_poly).blend1  Aircraft_Carrier(low_poly).mtl  Untitled.blend
assets/shaders/: fragment.glsl  vertex.glsl
shaders/: fragment.glsl  vertex.glsl
sketches/: Research_Tree.xcf  Untitled.xcf
src/: Camera.cpp  Camera.hpp  main.cpp
